--- a/tests/qunit/index.html
+++ b/tests/qunit/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/qunit@2.14.1/qunit/qunit.css" />
         <script src="https://cdn.jsdelivr.net/npm/qunit@2.14.1/qunit/qunit.js"></script>
         <!-- Please build at first. -->
-        <script src="../../dist/index.js"></script>
+        <script src="../../dist/index.min.js"></script>
     </head>
     <body>
         <div id="qunit"></div>
